Merchant#getRecipes should return an immutable list